# discordbot

./: .gitignore  README.md  calendar_tools.py  main.py  minimax_template.py  pyproject.toml  tool_calls.py  tools.py
examples/: calendar_example.py  calendar_write_example.py  calendar_write_task.py
tests/: conftest.py  test_calendar_tools.py  test_minimax_template.py
